hard-gists/4494118/run.log
=== Docker Run Log for 4494118 ===
Started at: Mi 29. Okt 14:40:42 CET 2025

[2025-10-29 14:40:43] START: Running container for 4494118
[2025-10-29 14:40:43] SUCCESS: Container 9991dbe7b5c53b867ffd7320c3a9fbb84ed728151be17c3b5ae3588d48752bca started for 4494118
=== Container logs for 4494118 ===
  File "/snippet.py", line 810
    print "Received text message: " + str(message)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4494118 ===
[2025-10-29 14:40:45] INFO: Container 9991dbe7b5c53b867ffd7320c3a9fbb84ed728151be17c3b5ae3588d48752bca has stopped
